fixed dark mode issue of edit component

--- a/ToDo2/ToDo2/src/app/Components/home-page/home-page.component.css
+++ b/ToDo2/ToDo2/src/app/Components/home-page/home-page.component.css
@@ -15,12 +15,7 @@ button {
 .last-day th {
   color: #ffc107;
 }
-/* h3 {
-  color: #c8efc8;
-}
-label {
-  color: #ffffff;
-} */
+
 .container {
   margin-top: 30px;
 }
@@ -54,8 +49,6 @@ table {
 th {
   text-align: center;
 }
-/* table.light-mode {
-  color: pink;
-} */
+
 
 
